--- a/Cliente/index.html
+++ b/Cliente/index.html
@@ -117,6 +117,6 @@
         </div>
       </div>
     </footer>
-    <script src="./scripts/inicio.JS"></script>
+    <script src="./scripts/inicio.js"></script>
   </body>
 </html>
