--- a/Cliente/index.html
+++ b/Cliente/index.html
@@ -1,122 +1,166 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Hospital Ing. JAV & Asociados</title>
-    <link rel="stylesheet" href="./estilos/inicio.css" />
-    <!-- Incluye el enlace a Font Awesome para los iconos -->
-    <link
-      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css"
-      rel="stylesheet"
-    />
-  </head>
-  <body>
-    <header>
-      <div class="header-container">
-        <div class="logo">
-          <img
-            src="https://raw.githubusercontent.com/2212002118/Ingenieros_JAV/9153ef5770ea15b43be4d72f90852b55475878f1/Final/Cliente/Imagenes/logo.jpg"
-            alt="Logo"
-          />
-        </div>
-        <nav>
-          <ul class="nav-links">
-            <li><a href="index.html">Inicio</a></li>
-            <li><a href="#">Consulta tu Cita (Pacientes CRUD)</a></li>
-            <li><a href="./pages/doctores.html">Nuestro equipo médico</a></li>
-            <li><a href="#">Consulta tu Historial Médico (CRUD)</a></li>
-            <li><a href="./pages/contactanos.html">Contáctanos</a></li>
-          </ul>
-        </nav>
-        <!-- Contenedor de usuario y botón de cierre de sesión -->
-        <div class="user-container">
-          <div id="userGreeting">Hola, Usuario</div>
-          <button id="logoutButton">Cerrar Sesión</button>
-        </div>
+
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Hospital Ing. JAV & Asociados</title>
+  <link rel="stylesheet" href="./estilos/inicio.css" />
+  <!-- Incluye el enlace a Font Awesome para los iconos -->
+  <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css" rel="stylesheet" />
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
+    integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+
+</head>
+
+<body>
+  <header>
+    <div class="header-container">
+      <div class="logo">
+        <img
+          src="https://raw.githubusercontent.com/2212002118/Ingenieros_JAV/9153ef5770ea15b43be4d72f90852b55475878f1/Final/Cliente/Imagenes/logo.jpg"
+          alt="Logo" />
       </div>
-    </header>
 
-    <!--Cuerpo principal de la pagina-->
-    <main>
-      <section class="image-gallery">
-        <div>
-          <img
-            src="https://raw.githubusercontent.com/2212002118/Ingenieros_JAV/9153ef5770ea15b43be4d72f90852b55475878f1/Final/Cliente/Imagenes/imagen1.jpg"
-          />
+      <nav>
+        <ul class="nav-links">
+          <li><a href="index.html">Inicio</a></li>
+          <li><a href="./pages/consultaCita.html">Consulta tu Cita (Pacientes CRUD)</a></li>
+          <li><a href="./pages/doctores.html">Nuestro equipo médico</a></li>
+          <li><a href="./pages/consultaHistorialMedico.html">Consulta tu Historial Médico (CRUD)</a></li>
+          <li><a href="./pages/contactanos.html">Contáctanos</a></li>
+        </ul>
+      </nav>
+      <!-- Contenedor de usuario y botón de cierre de sesión -->
+      <div class="user-container">
+        <div id="userGreeting">Hola, Usuario</div>
+        <button id="logoutButton">Cerrar Sesión</button>
+      </div>
+    </div>
+  </header>
+  <section>
+    <!-- Añadiremos un componente carrousel de boostrap -->
+    <div id="carouselExampleDark" class="carousel carousel-dark slide">
+      <div class="carousel-indicators">
+        <button type="button" data-bs-target="#carouselExampleDark" data-bs-slide-to="0" class="active"
+          aria-current="true" aria-label="Slide 1"></button>
+        <button type="button" data-bs-target="#carouselExampleDark" data-bs-slide-to="1" aria-label="Slide 2"></button>
+        <button type="button" data-bs-target="#carouselExampleDark" data-bs-slide-to="2" aria-label="Slide 3"></button>
+      </div>
+      <div class="carousel-inner">
+        <div class="carousel-item active" data-bs-interval="10000">
+          <img src="./Imagenes/imagenes_carrusel/diapo_1.jpg" class="d-block w-100" alt="...">
+          <div class="carousel-caption d-none d-md-block">
+            <h5>Nos importa tu salud</h5>
+            <p>Este nuevo año deseamos que puedas ponerte al corriente con tu salud. Aprovecha nuestro descuentos</p>
+          </div>
         </div>
-        <div>
-          <img
-            src="https://raw.githubusercontent.com/2212002118/Ingenieros_JAV/9153ef5770ea15b43be4d72f90852b55475878f1/Final/Cliente/Imagenes/imagen1.jpg"
-          />
+        <div class="carousel-item" data-bs-interval="2000">
+          <img src="./Imagenes/imagenes_carrusel/diapo_2.jpg" class="d-block w-100" alt="...">
+          <div class="carousel-caption d-none d-md-block">
+            <h5>Accede a beneficios increíbles</h5>
+            <p>Contamos con un amplico catálogo en química para tu salud. Para este 2025 que te sobre tiempo para tí!!
+            </p>
+          </div>
         </div>
-        <div>
-          <img
-            src="https://raw.githubusercontent.com/2212002118/Ingenieros_JAV/9153ef5770ea15b43be4d72f90852b55475878f1/Final/Cliente/Imagenes/imagen1.jpg"
-          />
-        </div>
-      </section>
-
-      <section class="about-us">
-        <h2>Sobre nosotros</h2>
-        <p>
-          En Vitalink Salud, nos dedicamos a brindar servicios médicos
-          integrales de calidad. Nuestro compromiso es con la salud y el
-          bienestar de cada paciente, ofreciendo atención personalizada
-          respaldada por tecnología avanzada y un equipo médico altamente
-          capacitado. Nos enorgullece ser un espacio donde la salud y la
-          confianza van de la mano.
-        </p>
-      </section>
-
-      <section class="additional-info">
-        <div class="video"></div>
-        <div class="why-us">
-          <h2>Porque somos tu mejor opción</h2>
-          <p>
-            Elegir Vitalink Salud significa optar por atención médica eficiente,
-            accesible y humana. Contamos con herramientas tecnológicas como la
-            consulta de citas en línea, acceso a historial médico digital, y un
-            equipo médico que prioriza tu bienestar. Somos tu aliado en el
-            cuidado de tu salud.
-          </p>
-        </div>
-      </section>
-    </main>
-
-    <footer>
-      <div class="footer-container">
-        <div class="address">
-          <p>
-            Dirección: Av San Pablo Xalpa 180, San Martin Xochinahuac,
-            Azcapotzalco, 02128 Ciudad de México, CDMX
-          </p>
-        </div>
-        <div class="company">
-          <p>Ingenieros JAV S.A C.V</p>
-          <!--Los catalogos como lo definimos?-->
-          <p>Consulta nuestro catálogo de precios</p>
-        </div>
-        <div class="social-media">
-          <p>Síguenos en nuestras redes sociales</p>
-          <div class="icons">
-            <span>
-              <a
-                href="https://www.facebook.com/CBI.UAM.Azcapotzalco/?locale=es_LA"
-                target="_blank"
-              >
-                <i class="fab fa-facebook"></i> Facebook
-              </a>
-            </span>
-            <span>
-              <a href="https://x.com/UAMAzcOficial" target="_blank">
-                <i class="fab fa-x-twitter"></i> Twitter
-              </a>
-            </span>
+        <div class="carousel-item">
+          <img src="./Imagenes/imagenes_carrusel/diapo_5.jpg" class="d-block w-100" alt="...">
+          <div class="carousel-caption d-none d-md-block">
+            <h5>Nuestra competencia se atiende en Vitalink</h5>
+            <p>Aunque no lo creeas estamos a la vanguardía con los grandes hospitales a nivel mundial.</p>
           </div>
         </div>
       </div>
-    </footer>
-    <script src="./scripts/inicio.js"></script>
-  </body>
+      <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleDark" data-bs-slide="prev">
+        <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+        <span class="visually-hidden">Previous</span>
+      </button>
+      <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleDark" data-bs-slide="next">
+        <span class="carousel-control-next-icon" aria-hidden="true"></span>
+        <span class="visually-hidden">Next</span>
+      </button>
+    </div>
+  </section>
+  <!--Cuerpo principal de la pagina-->
+  <main>
+    <section class="image-gallery">
+      <div>
+        <img
+          src="https://raw.githubusercontent.com/2212002118/Ingenieros_JAV/9153ef5770ea15b43be4d72f90852b55475878f1/Final/Cliente/Imagenes/imagen1.jpg" />
+      </div>
+      <div>
+        <img
+          src="https://raw.githubusercontent.com/2212002118/Ingenieros_JAV/9153ef5770ea15b43be4d72f90852b55475878f1/Final/Cliente/Imagenes/imagen1.jpg" />
+      </div>
+      <div>
+        <img
+          src="https://raw.githubusercontent.com/2212002118/Ingenieros_JAV/9153ef5770ea15b43be4d72f90852b55475878f1/Final/Cliente/Imagenes/imagen1.jpg" />
+      </div>
+    </section>
+
+    <section class="about-us">
+      <h2>Sobre nosotros</h2>
+      <p>
+        En Vitalink Salud, nos dedicamos a brindar servicios médicos
+        integrales de calidad. Nuestro compromiso es con la salud y el
+        bienestar de cada paciente, ofreciendo atención personalizada
+        respaldada por tecnología avanzada y un equipo médico altamente
+        capacitado. Nos enorgullece ser un espacio donde la salud y la
+        confianza van de la mano.
+      </p>
+    </section>
+
+    <section class="additional-info">
+      <div class="video"></div>
+      <div class="why-us">
+        <h2>Porque somos tu mejor opción</h2>
+        <p>
+          Elegir Vitalink Salud significa optar por atención médica eficiente,
+          accesible y humana. Contamos con herramientas tecnológicas como la
+          consulta de citas en línea, acceso a historial médico digital, y un
+          equipo médico que prioriza tu bienestar. Somos tu aliado en el
+          cuidado de tu salud.
+        </p>
+      </div>
+    </section>
+  </main>
+
+  <footer>
+    <div class="footer-container">
+      <div class="address">
+        <p>
+          Dirección: Av San Pablo Xalpa 180, San Martin Xochinahuac,
+          Azcapotzalco, 02128 Ciudad de México, CDMX
+        </p>
+      </div>
+      <div class="company">
+        <p>Ingenieros JAV S.A C.V</p>
+        <!--Los catalogos como lo definimos?-->
+        <p>Consulta nuestro catálogo de precios</p>
+      </div>
+      <div class="social-media">
+        <p>Síguenos en nuestras redes sociales</p>
+        <div class="icons">
+          <span>
+            <a href="https://www.facebook.com/CBI.UAM.Azcapotzalco/?locale=es_LA" target="_blank">
+              <i class="fab fa-facebook"></i> Facebook
+            </a>
+          </span>
+          <span>
+            <a href="https://x.com/UAMAzcOficial" target="_blank">
+              <i class="fab fa-x-twitter"></i> Twitter
+            </a>
+          </span>
+        </div>
+      </div>
+    </div>
+  </footer>
+  <script src="./scripts/inicio.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
+    integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
+    crossorigin="anonymous"></script>
+</body>
+
+</body>
+
 </html>
