--- a/Cliente/pages/consultaCita.html
+++ b/Cliente/pages/consultaCita.html
@@ -1,79 +1,79 @@
 <!DOCTYPE html>
 <html lang="es">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Consulta tu historial Medico (CRUD)</title>
 
-    <link rel="stylesheet" href="../estilos/doctores.css" />
-  </head>
-  <body>
-    <header>
-      <div class="header-container">
-        <div class="logo">
-          <img
-            src="https://raw.githubusercontent.com/2212002118/Ingenieros_JAV/9153ef5770ea15b43be4d72f90852b55475878f1/Final/Cliente/Imagenes/logo.jpg"
-            alt="Logo"
-          />
-        </div>
-        <nav>
-          <ul class="nav-links">
-            <li><a href="../index.html">Inicio</a></li>
-            <li><a href="#">Consulta tu Cita (Pacientes CRUD)</a></li>
-            <li><a href="doctores.html">Nuestro equipo médico</a></li>
-            <li><a href="#">Consulta tu Historial Médico (CRUD)</a></li>
-            <li><a href="contactanos.html">Contáctanos</a></li>
-          </ul>
-        </nav>
-        <!-- Contenedor de usuario y botón de cierre de sesión -->
-        <div class="user-container">
-          <div id="userGreeting">Hola, Usuario</div>
-          <button id="logoutButton">Cerrar Sesión</button>
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Consulta tu historial Medico (CRUD)</title>
+
+  <link rel="stylesheet" href="../estilos/consultaCita.css" />
+</head>
+
+<body>
+  <header>
+    <div class="header-container">
+      <div class="logo">
+        <img
+          src="https://raw.githubusercontent.com/2212002118/Ingenieros_JAV/9153ef5770ea15b43be4d72f90852b55475878f1/Final/Cliente/Imagenes/logo.jpg"
+          alt="Logo" />
+      </div>
+      <nav>
+        <ul class="nav-links">
+          <li><a href="../index.html">Inicio</a></li>
+          <li><a href="../pages/consultaCita.html">Consulta tu Cita (Pacientes CRUD)</a></li>
+          <li><a href="doctores.html">Nuestro equipo médico</a></li>
+          <li><a href="../pages/consultaHistorialMedico.html">Consulta tu Historial Médico (CRUD)</a></li>
+          <li><a href="contactanos.html">Contáctanos</a></li>
+        </ul>
+      </nav>
+
+      <!-- Contenedor de usuario y botón de cierre de sesión -->
+      <div class="user-container">
+        <div id="userGreeting">Hola, Usuario</div>
+        <button id="logoutButton">Cerrar Sesión</button>
+      </div>
+    </div>
+  </header>
+
+  <main>
+    <div class="container">
+      <h1 class="titulo">Consulta tu cita</h1>
+
+      <div class="doctores"></div>
+    </div>
+  </main>
+
+  <footer>
+    <div class="footer-container">
+      <div class="address">
+        <p>
+          Dirección: Av San Pablo Xalpa 180, San Martin Xochinahuac,
+          Azcapotzalco, 02128 Ciudad de México, CDMX
+        </p>
+      </div>
+      <div class="company">
+        <p>Ingenieros JAV S.A C.V</p>
+        <!--Los catalogos como lo definimos?-->
+        <p>Consulta nuestro catálogo de precios</p>
+      </div>
+      <div class="social-media">
+        <p>Síguenos en nuestras redes sociales</p>
+        <div class="icons">
+          <span>
+            <a href="https://www.facebook.com/CBI.UAM.Azcapotzalco/?locale=es_LA" target="_blank">
+              <i class="fab fa-facebook"></i> Facebook
+            </a>
+          </span>
+          <span>
+            <a href="https://x.com/UAMAzcOficial" target="_blank">
+              <i class="fab fa-x-twitter"></i> Twitter
+            </a>
+          </span>
         </div>
       </div>
-    </header>
+    </div>
+  </footer>
+  <!-- <script src="../scripts/doctores.js"></script> -->
+</body>
 
-    <main>
-      <div class="container">
-        <h1 class="titulo">Consulta tu historial medico en linea</h1>
-
-        <div class="doctores"></div>
-      </div>
-    </main>
-
-    <footer>
-      <div class="footer-container">
-        <div class="address">
-          <p>
-            Dirección: Av San Pablo Xalpa 180, San Martin Xochinahuac,
-            Azcapotzalco, 02128 Ciudad de México, CDMX
-          </p>
-        </div>
-        <div class="company">
-          <p>Ingenieros JAV S.A C.V</p>
-          <!--Los catalogos como lo definimos?-->
-          <p>Consulta nuestro catálogo de precios</p>
-        </div>
-        <div class="social-media">
-          <p>Síguenos en nuestras redes sociales</p>
-          <div class="icons">
-            <span>
-              <a
-                href="https://www.facebook.com/CBI.UAM.Azcapotzalco/?locale=es_LA"
-                target="_blank"
-              >
-                <i class="fab fa-facebook"></i> Facebook
-              </a>
-            </span>
-            <span>
-              <a href="https://x.com/UAMAzcOficial" target="_blank">
-                <i class="fab fa-x-twitter"></i> Twitter
-              </a>
-            </span>
-          </div>
-        </div>
-      </div>
-    </footer>
-    <script src="../scripts/doctores.js"></script>
-  </body>
 </html>
