sumando imagenes y parrafos a index

--- a/Cliente/index.html
+++ b/Cliente/index.html
@@ -83,7 +83,7 @@
   </section>
   <!--Cuerpo principal de la pagina-->
   <main>
-    <section class="image-gallery">
+    <!-- <section class="image-gallery">
       <div>
         <img
           src="https://raw.githubusercontent.com/2212002118/Ingenieros_JAV/9153ef5770ea15b43be4d72f90852b55475878f1/Final/Cliente/Imagenes/imagen1.jpg" />
@@ -96,33 +96,55 @@
         <img
           src="https://raw.githubusercontent.com/2212002118/Ingenieros_JAV/9153ef5770ea15b43be4d72f90852b55475878f1/Final/Cliente/Imagenes/imagen1.jpg" />
       </div>
-    </section>
+    </section> -->
 
-    <section class="about-us">
+    <article class="about-us">
       <h2>Sobre nosotros</h2>
-      <p>
-        En Vitalink Salud, nos dedicamos a brindar servicios médicos
-        integrales de calidad. Nuestro compromiso es con la salud y el
-        bienestar de cada paciente, ofreciendo atención personalizada
-        respaldada por tecnología avanzada y un equipo médico altamente
-        capacitado. Nos enorgullece ser un espacio donde la salud y la
-        confianza van de la mano.
-      </p>
-    </section>
+      <section class="about-us-container">
+        <section>
+          <p>
+            En Vitalink Salud, nos dedicamos a brindar servicios médicos integrales de calidad. Nuestro compromiso es
+            con la salud
+            y el bienestar de cada paciente, ofreciendo atención personalizada respaldada por tecnología avanzada y un
+            equipo
+            médico altamente capacitado. Nos enorgullece ser un espacio donde la salud y la confianza van de la mano.
+          </p>
+          <p>
+            Además, nos esforzamos por promover una cultura de cuidado continuo, brindando herramientas educativas y
+            recursos para
+            que cada paciente pueda tomar decisiones informadas sobre su salud. Creemos que el conocimiento es una parte
+            fundamental del bienestar, y estamos aquí para apoyarte en cada paso del camino.
+          </p>
+        </section>
+        <img src="./Imagenes/imagenes_carrusel/about-us.png" alt="">
+      </section>
+    </article>
 
-    <section class="additional-info">
-      <div class="video"></div>
-      <div class="why-us">
-        <h2>Porque somos tu mejor opción</h2>
-        <p>
-          Elegir Vitalink Salud significa optar por atención médica eficiente,
-          accesible y humana. Contamos con herramientas tecnológicas como la
-          consulta de citas en línea, acceso a historial médico digital, y un
-          equipo médico que prioriza tu bienestar. Somos tu aliado en el
-          cuidado de tu salud.
-        </p>
+    <article class="additional-info why-us">
+      <h2 class="why-us-title">Porque somos tu mejor opción</h2> <!-- Mover el título aquí -->
+      <div class="content">
+        <div class="video">
+          <iframe width="560" height="315" src="https://www.youtube.com/embed/vZra_doCzoI?si=bjWXV5sFqw-Zb8qM"
+            title="YouTube video player" frameborder="0"
+            allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+            referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+        </div>
+        <section class="description-why-us">
+          <p>
+            Elegir Vitalink Salud significa optar por atención médica eficiente, accesible y humana. Contamos con
+            herramientas tecnológicas como la consulta de citas en línea, acceso a historial médico digital, y un equipo
+            médico que prioriza tu bienestar. Somos tu aliado en el cuidado de tu salud.
+          </p>
+          <p>
+            En Vitalink Salud, creemos que la prevención es clave para una vida saludable. Por eso, ofrecemos una amplia
+            gama de servicios preventivos, como chequeos médicos regulares, asesoría nutricional y programas
+            personalizados
+            de bienestar, diseñados para adaptarse a las necesidades de cada paciente.
+          </p>
+        </section>
       </div>
-    </section>
+    </article>
+
   </main>
 
   <footer>
