--- a/Cliente/pages/consultaCita.html
+++ b/Cliente/pages/consultaCita.html
@@ -7,6 +7,8 @@
   <title>Consulta tu historial Medico (CRUD)</title>
 
   <link rel="stylesheet" href="../estilos/consultaCita.css" />
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
+    integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
 </head>
 
 <body>
@@ -36,11 +38,20 @@
   </header>
 
   <main>
-    <div class="container">
+    <section>
       <h1 class="titulo">Consulta tu cita</h1>
-
-      <div class="doctores"></div>
-    </div>
+      <!-- Este div se gestiona dinamicamente -->
+      <!-- Cuando no se logea el usuario solo muestra el panel de busqueda por id -->
+      <!-- Cuando se logea usuario muestra el listado de todas las citas del usuario logeado -->
+      <div class="container-cita">
+        <form id="buscar-cita" class="form-busqueda">
+          <label for="idCita">Ingresa el ID de tu cita:</label>
+          <input type="text" id="idCita" name="idCita" required>
+          <button type="submit">Buscar</button>
+        </form>
+      </div>
+      <div class="listado-busqueda"></div>
+    </section>
   </main>
 
   <footer>
@@ -73,6 +84,10 @@
       </div>
     </div>
   </footer>
+  <script src="../scripts/citas.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
+    integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
+    crossorigin="anonymous"></script>
   <!-- <script src="../scripts/doctores.js"></script> -->
 </body>
 
