cambiando redireccion del logeo

--- a/Cliente/pages/consultaHistorialMedico.html
+++ b/Cliente/pages/consultaHistorialMedico.html
@@ -31,39 +31,40 @@
             </div>
         </div>
     </header>
-</body>
-<main>
-    <h1>Consulta tu historia Medico</h1>
-</main>
-<footer>
-    <div class="footer-container">
-        <div class="address">
-            <p>
-                Dirección: Av San Pablo Xalpa 180, San Martin Xochinahuac,
-                Azcapotzalco, 02128 Ciudad de México, CDMX
-            </p>
-        </div>
-        <div class="company">
-            <p>Ingenieros JAV S.A C.V</p>
-            <!--Los catalogos como lo definimos?-->
-            <p>Consulta nuestro catálogo de precios</p>
-        </div>
-        <div class="social-media">
-            <p>Síguenos en nuestras redes sociales</p>
-            <div class="icons">
-                <span>
-                    <a href="https://www.facebook.com/CBI.UAM.Azcapotzalco/?locale=es_LA" target="_blank">
-                        <i class="fab fa-facebook"></i> Facebook
-                    </a>
-                </span>
-                <span>
-                    <a href="https://x.com/UAMAzcOficial" target="_blank">
-                        <i class="fab fa-x-twitter"></i> Twitter
-                    </a>
-                </span>
+    <main>
+        <h1>Consulta tu historia Medico</h1>
+    </main>
+    <footer>
+        <div class="footer-container">
+            <div class="address">
+                <p>
+                    Dirección: Av San Pablo Xalpa 180, San Martin Xochinahuac,
+                    Azcapotzalco, 02128 Ciudad de México, CDMX
+                </p>
+            </div>
+            <div class="company">
+                <p>Ingenieros JAV S.A C.V</p>
+                <!--Los catalogos como lo definimos?-->
+                <p>Consulta nuestro catálogo de precios</p>
+            </div>
+            <div class="social-media">
+                <p>Síguenos en nuestras redes sociales</p>
+                <div class="icons">
+                    <span>
+                        <a href="https://www.facebook.com/CBI.UAM.Azcapotzalco/?locale=es_LA" target="_blank">
+                            <i class="fab fa-facebook"></i> Facebook
+                        </a>
+                    </span>
+                    <span>
+                        <a href="https://x.com/UAMAzcOficial" target="_blank">
+                            <i class="fab fa-x-twitter"></i> Twitter
+                        </a>
+                    </span>
+                </div>
             </div>
         </div>
-    </div>
-</footer>
+    </footer>
+    <script src="../scripts/consultaHistorialM.js"></script>
+</body>
 
 </html>
