sumando pagina de catalogo Analisis Medicos

--- a/Cliente/index.html
+++ b/Cliente/index.html
@@ -158,7 +158,7 @@
       <div class="company">
         <p>Ingenieros JAV S.A C.V</p>
         <!--Los catalogos como lo definimos?-->
-        <p>Consulta nuestro catálogo de precios</p>
+        <p><a href="./pages/catalogoAnalisis.html">Consulta nuestro catálogo de precios</a></p>
       </div>
       <div class="social-media">
         <p>Síguenos en nuestras redes sociales</p>
