--- a/Cliente/index.html
+++ b/Cliente/index.html
@@ -10,7 +10,7 @@
   <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css" rel="stylesheet" />
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
-
+  <link rel="icon" type="image/jpeg" href="https://raw.githubusercontent.com/Javier-Vera-Flores/Hospital-Ing-JAV-sa-de-cv/main/Cliente/Imagenes/icono.jpg">
 </head>
 
 <body>
@@ -170,7 +170,7 @@
           </span>
           <span>
             <a href="https://x.com/UAMAzcOficial" target="_blank">
-              <i class="fab fa-x-twitter"></i> Twitter
+              <i class="fab fa-x"></i> X
             </a>
           </span>
         </div>
