--- a/Cliente/pages/catalogoAnalisis.html
+++ b/Cliente/pages/catalogoAnalisis.html
@@ -4,10 +4,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="icon" type="image/jpeg" href="https://raw.githubusercontent.com/Javier-Vera-Flores/Hospital-Ing-JAV-sa-de-cv/main/Cliente/Imagenes/icono.jpg">
     <title>Consulta de Catalogo</title>
     <link rel="stylesheet" href="../estilos/catalogoAnalisis.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+    <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css" rel="stylesheet" />
 </head>
 
 <body>
@@ -72,6 +74,37 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
         crossorigin="anonymous"></script>
+
+    <footer>
+        <div class="footer-container">
+            <div class="address">
+            <p>
+                Dirección: Av San Pablo Xalpa 180, San Martin Xochinahuac,
+                Azcapotzalco, 02128 Ciudad de México, CDMX
+            </p>
+            </div>
+            <div class="company">
+            <p>Ingenieros JAV S.A C.V</p>
+            <!--Los catalogos como lo definimos?-->
+            <p><a href="./pages/catalogoAnalisis.html">Consulta nuestro catálogo de precios</a></p>
+            </div>
+            <div class="social-media">
+            <p>Síguenos en nuestras redes sociales</p>
+            <div class="icons">
+                <span>
+                <a href="https://www.facebook.com/CBI.UAM.Azcapotzalco/?locale=es_LA" target="_blank">
+                    <i class="fab fa-facebook"></i> Facebook
+                </a>
+                </span>
+                <span>
+                <a href="https://x.com/UAMAzcOficial" target="_blank">
+                    <i class="fab fa-x"></i> X
+                </a>
+                </span>
+            </div>
+            </div>
+        </div>
+        </footer>
 </body>
 
 </html>
