--- a/Cliente/pages/consultaCita.html
+++ b/Cliente/pages/consultaCita.html
@@ -5,10 +5,11 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Consulta tu historial Medico (CRUD)</title>
-
+  <link rel="icon" type="image/jpeg" href="https://raw.githubusercontent.com/Javier-Vera-Flores/Hospital-Ing-JAV-sa-de-cv/main/Cliente/Imagenes/icono.jpg">
   <link rel="stylesheet" href="../estilos/consultaCita.css" />
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+  <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css" rel="stylesheet" />
 </head>
 
 <body>
@@ -65,7 +66,7 @@
       <div class="company">
         <p>Ingenieros JAV S.A C.V</p>
         <!--Los catalogos como lo definimos?-->
-        <p>Consulta nuestro catálogo de precios</p>
+        <p><a href="./pages/catalogoAnalisis.html">Consulta nuestro catálogo de precios</a></p>
       </div>
       <div class="social-media">
         <p>Síguenos en nuestras redes sociales</p>
@@ -77,13 +78,14 @@
           </span>
           <span>
             <a href="https://x.com/UAMAzcOficial" target="_blank">
-              <i class="fab fa-x-twitter"></i> Twitter
+              <i class="fab fa-x"></i> X
             </a>
           </span>
         </div>
       </div>
     </div>
   </footer>
+
   <script src="../scripts/citas.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
     integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
