--- a/Cliente/pages/consultaHistorialMedico.html
+++ b/Cliente/pages/consultaHistorialMedico.html
@@ -4,8 +4,13 @@
 <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <!--Titulo de la pagina web-->
     <title>Consulta tu historial Medico</title>
+    <!--Link necesario para cargar el css-->
     <link rel="stylesheet" href="../estilos/consultaHistorialMedico.css" />
+    <!--Enlaces para los iconos de la pagina web-->
+    <link rel="icon" type="image/jpeg" href="https://raw.githubusercontent.com/Javier-Vera-Flores/Hospital-Ing-JAV-sa-de-cv/main/Cliente/Imagenes/icono.jpg">
+    <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css" rel="stylesheet" />
 </head>
 
 <body>
@@ -34,36 +39,49 @@
     <main>
         <h1>Consulta tu historia Medico</h1>
     </main>
+
+
+
+
+
+
+
+
+
+
+
+    <!--No modificar-->
     <footer>
         <div class="footer-container">
-            <div class="address">
-                <p>
-                    Dirección: Av San Pablo Xalpa 180, San Martin Xochinahuac,
-                    Azcapotzalco, 02128 Ciudad de México, CDMX
-                </p>
+          <div class="address">
+            <p>
+              Dirección: Av San Pablo Xalpa 180, San Martin Xochinahuac,
+              Azcapotzalco, 02128 Ciudad de México, CDMX
+            </p>
+          </div>
+          <div class="company">
+            <p>Ingenieros JAV S.A C.V</p>
+            <!--Los catalogos como lo definimos?-->
+            <p><a href="./pages/catalogoAnalisis.html">Consulta nuestro catálogo de precios</a></p>
+          </div>
+          <div class="social-media">
+            <p>Síguenos en nuestras redes sociales</p>
+            <div class="icons">
+              <span>
+                <a href="https://www.facebook.com/CBI.UAM.Azcapotzalco/?locale=es_LA" target="_blank">
+                  <i class="fab fa-facebook"></i> Facebook
+                </a>
+              </span>
+              <span>
+                <a href="https://x.com/UAMAzcOficial" target="_blank">
+                  <i class="fab fa-x"></i> X
+                </a>
+              </span>
             </div>
-            <div class="company">
-                <p>Ingenieros JAV S.A C.V</p>
-                <!--Los catalogos como lo definimos?-->
-                <p>Consulta nuestro catálogo de precios</p>
-            </div>
-            <div class="social-media">
-                <p>Síguenos en nuestras redes sociales</p>
-                <div class="icons">
-                    <span>
-                        <a href="https://www.facebook.com/CBI.UAM.Azcapotzalco/?locale=es_LA" target="_blank">
-                            <i class="fab fa-facebook"></i> Facebook
-                        </a>
-                    </span>
-                    <span>
-                        <a href="https://x.com/UAMAzcOficial" target="_blank">
-                            <i class="fab fa-x-twitter"></i> Twitter
-                        </a>
-                    </span>
-                </div>
-            </div>
+          </div>
         </div>
     </footer>
+    <!--Fin no modificar-->
     <script src="../scripts/consultaHistorialM.js"></script>
 </body>
 
