--- a/Cliente/pages/doctores.html
+++ b/Cliente/pages/doctores.html
@@ -2,31 +2,36 @@
 <html lang="es">
 
 <head>
+  <!-- Configuración de codificación de caracteres para soportar texto internacional -->
   <meta charset="UTF-8" />
+  <!-- Configuración para hacer el diseño responsivo en dispositivos móviles -->
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <!-- Título que aparecerá en la pestaña del navegador -->
   <title>Doctores</title>
-  <link rel="icon" type="image/jpeg" href="images/favicon.jpg">
+  <!-- Enlace al archivo CSS personalizado para los estilos de esta página -->
   <link rel="stylesheet" href="../estilos/doctores.css" />
+  <!-- Favicon que se muestra en la pestaña del navegador -->
+  <link rel="icon" type="image/jpeg" href="https://raw.githubusercontent.com/Javier-Vera-Flores/Hospital-Ing-JAV-sa-de-cv/main/Cliente/Imagenes/icono.jpg">
+  <!-- Biblioteca externa Font Awesome para el uso de iconos -->
+  <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css" rel="stylesheet" />
 </head>
 
 <body>
+  <!-- Encabezado con logo, navegación y usuario -->
   <header>
     <div class="header-container">
       <div class="logo">
-        <img
-          src="https://raw.githubusercontent.com/2212002118/Ingenieros_JAV/9153ef5770ea15b43be4d72f90852b55475878f1/Final/Cliente/Imagenes/logo.jpg"
-          alt="Logo" />
+        <img src="https://raw.githubusercontent.com/2212002118/Ingenieros_JAV/9153ef5770ea15b43be4d72f90852b55475878f1/Final/Cliente/Imagenes/logo.jpg" alt="Logo" />
       </div>
       <nav>
         <ul class="nav-links">
           <li><a href="../index.html">Inicio</a></li>
-          <li><a href="../pages/consultaCita.html">Consulta tu Cita (Pacientes CRUD)</a></li>
+          <li><a href="../pages/consultaCita.html">Consulta tu Cita</a></li>
           <li><a href="doctores.html">Nuestro equipo médico</a></li>
-          <li><a href="../pages/consultaHistorialMedico.html">Consulta tu Historial Médico (CRUD)</a></li>
+          <li><a href="../pages/consultaHistorialMedico.html">Consulta tu Historial Médico</a></li>
           <li><a href="contactanos.html">Contáctanos</a></li>
         </ul>
       </nav>
-      <!-- Contenedor de usuario y botón de cierre de sesión -->
       <div class="user-container">
         <div id="userGreeting">Hola, Usuario</div>
         <button id="logoutButton">Cerrar Sesión</button>
@@ -34,41 +39,47 @@
     </div>
   </header>
 
+  <!-- Contenido principal -->
   <div class="container">
     <h1 class="titulo">Doctores</h1>
     <div class="doctores"></div>
   </div>
 
   <footer>
+    <!-- Contenedor principal del pie de página -->
     <div class="footer-container">
+      <!-- Sección de dirección -->
       <div class="address">
-        <p>
-          Dirección: Av San Pablo Xalpa 180, San Martin Xochinahuac,
-          Azcapotzalco, 02128 Ciudad de México, CDMX
-        </p>
+        <p>Dirección: Av San Pablo Xalpa 180, San Martin Xochinahuac, Azcapotzalco, 02128 Ciudad de México, CDMX</p>
       </div>
+      <!-- Información de la empresa -->
       <div class="company">
         <p>Ingenieros JAV S.A C.V</p>
-        <!--Los catalogos como lo definimos?-->
+        <!-- Texto sobre el catálogo de precios -->
         <p>Consulta nuestro catálogo de precios</p>
       </div>
+      <!-- Enlaces a redes sociales -->
       <div class="social-media">
         <p>Síguenos en nuestras redes sociales</p>
         <div class="icons">
+          <!-- Enlace a la página oficial de Facebook -->
           <span>
             <a href="https://www.facebook.com/CBI.UAM.Azcapotzalco/?locale=es_LA" target="_blank">
               <i class="fab fa-facebook"></i> Facebook
             </a>
           </span>
+          <!-- Enlace a la página oficial en X (antes Twitter) -->
           <span>
             <a href="https://x.com/UAMAzcOficial" target="_blank">
-              <i class="fab fa-x-twitter"></i> Twitter
+              <i class="fab fa-x"></i> X
             </a>
           </span>
         </div>
       </div>
     </div>
   </footer>
+
+  <!-- Enlace al archivo JavaScript que maneja la lógica de esta página -->
   <script src="../scripts/doctores.js"></script>
 </body>
 
