--- a/Cliente/pages/catalogoAnalisis.html
+++ b/Cliente/pages/catalogoAnalisis.html
@@ -4,7 +4,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="icon" type="image/jpeg" href="https://raw.githubusercontent.com/Javier-Vera-Flores/Hospital-Ing-JAV-sa-de-cv/main/Cliente/Imagenes/icono.jpg">
+    <link rel="icon" type="image/jpeg"
+        href="https://raw.githubusercontent.com/Javier-Vera-Flores/Hospital-Ing-JAV-sa-de-cv/main/Cliente/Imagenes/icono.jpg">
     <title>Consulta de Catalogo</title>
     <link rel="stylesheet" href="../estilos/catalogoAnalisis.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
@@ -17,10 +18,22 @@
         <h1 class="text-center mb-4">Solicita tus analis aquí</h1>
 
         <!-- Análisis de sangre -->
-        <section class="service-section">
+        <section class="service-section ">
             <h2 class="service-title">Análisis de Sangre</h2>
             <p class="service-price">Precio: $500 MXN</p>
-            <img src="https://via.placeholder.com/400x200" alt="Análisis de Sangre" class="service-image">
+            <div class="container-section">
+                <img src="../Imagenes/imagenes_catalogo/analisis_sangre_400x222.png" alt="Análisis de Sangre"
+                    class="service-image">
+                <section class="description-title">
+                    <h3>Descripcion</h3>
+                    <p>
+                        Realizamos análisis de sangre con alta precisión para obtener resultados confiables que apoyen
+                        en la
+                        detección temprana de diversas condiciones médicas. Nuestro equipo garantiza un manejo seguro y
+                        profesional.
+                    </p>
+                </section>
+            </div>
             <div class="service-buttons">
                 <button class="btn btn-primary">Solicitar</button>
                 <button class="btn btn-outline-info">Más Información</button>
@@ -31,7 +44,20 @@
         <section class="service-section">
             <h2 class="service-title">Radiografías</h2>
             <p class="service-price">Precio: $800 MXN</p>
-            <img src="https://via.placeholder.com/400x200" alt="Radiografías" class="service-image">
+            <div class="container-section">
+                <img src="../Imagenes/imagenes_catalogo/analisis_radiografia_400x229.png" alt="Radiografías"
+                    class="service-image">
+                <section class="description-title">
+                    <h3>Descripcion</h3>
+                    <p>
+                        Ofrecemos servicios de radiografía con tecnología de última generación para obtener imágenes
+                        claras
+                        y detalladas que faciliten un diagnóstico preciso. Ideales para detectar fracturas, infecciones
+                        y
+                        más.
+                    </p>
+                </section>
+            </div>
             <div class="service-buttons">
                 <button class="btn btn-primary">Solicitar</button>
                 <button class="btn btn-outline-info">Más Información</button>
@@ -42,7 +68,19 @@
         <section class="service-section">
             <h2 class="service-title">Ultrasonidos</h2>
             <p class="service-price">Precio: $1,200 MXN</p>
-            <img src="https://via.placeholder.com/400x200" alt="Ultrasonidos" class="service-image">
+            <div class="container-section">
+                <img src="../Imagenes/imagenes_catalogo/analisis_ultrasonidos_400x240.png" alt="Ultrasonidos"
+                    class="service-image">
+                <section class="description-title">
+                    <h3>Descripcion</h3>
+                    <p>
+                        Nuestros ultrasonidos se realizan con equipos avanzados que permiten obtener imágenes detalladas
+                        y
+                        no invasivas de tejidos blandos y órganos internos, proporcionando un diagnóstico seguro y
+                        eficiente.
+                    </p>
+                </section>
+            </div>
             <div class="service-buttons">
                 <button class="btn btn-primary">Solicitar</button>
                 <button class="btn btn-outline-info">Más Información</button>
@@ -53,7 +91,19 @@
         <section class="service-section">
             <h2 class="service-title">Análisis de Orina</h2>
             <p class="service-price">Precio: $300 MXN</p>
-            <img src="https://via.placeholder.com/400x200" alt="Análisis de Orina" class="service-image">
+            <div class="container-section">
+                <img src="../Imagenes/imagenes_catalogo/analisis_origna_400x300.png" alt="Análisis de Orina"
+                    class="service-image">
+                <section class="description-title">
+                    <h3>Descripcion</h3>
+                    <p>
+                        Los análisis de orina que ofrecemos permiten detectar infecciones, enfermedades renales y otros
+                        problemas de salud con rapidez y exactitud. Un procedimiento simple, pero esencial para el
+                        cuidado
+                        de tu bienestar.
+                    </p>
+                </section>
+            </div>
             <div class="service-buttons">
                 <button class="btn btn-primary">Solicitar</button>
                 <button class="btn btn-outline-info">Más Información</button>
@@ -64,7 +114,17 @@
         <section class="service-section">
             <h2 class="service-title">Consulta Médica</h2>
             <p class="service-price">Precio: $600 MXN</p>
-            <img src="https://via.placeholder.com/400x200" alt="Consulta Médica" class="service-image">
+            <div class="container-section">
+                <img src="../Imagenes/imagenes_catalogo/consulta_medica_400x246.png" alt="Consulta Médica"
+                    class="service-image">
+                <section class="description-title">
+                    <h3>Descripcion</h3>
+                    <p>
+                        Agenda una consulta médica con nuestros especialistas para recibir una evaluación integral y
+                        personalizada. Estamos comprometidos con tu salud y bienestar, brindando atención de calidad.
+                    </p>
+                </section>
+            </div>
             <div class="service-buttons">
                 <button class="btn btn-primary">Solicitar</button>
                 <button class="btn btn-outline-info">Más Información</button>
@@ -75,36 +135,7 @@
         integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
         crossorigin="anonymous"></script>
 
-    <footer>
-        <div class="footer-container">
-            <div class="address">
-            <p>
-                Dirección: Av San Pablo Xalpa 180, San Martin Xochinahuac,
-                Azcapotzalco, 02128 Ciudad de México, CDMX
-            </p>
-            </div>
-            <div class="company">
-            <p>Ingenieros JAV S.A C.V</p>
-            <!--Los catalogos como lo definimos?-->
-            <p><a href="./pages/catalogoAnalisis.html">Consulta nuestro catálogo de precios</a></p>
-            </div>
-            <div class="social-media">
-            <p>Síguenos en nuestras redes sociales</p>
-            <div class="icons">
-                <span>
-                <a href="https://www.facebook.com/CBI.UAM.Azcapotzalco/?locale=es_LA" target="_blank">
-                    <i class="fab fa-facebook"></i> Facebook
-                </a>
-                </span>
-                <span>
-                <a href="https://x.com/UAMAzcOficial" target="_blank">
-                    <i class="fab fa-x"></i> X
-                </a>
-                </span>
-            </div>
-            </div>
-        </div>
-        </footer>
+
 </body>
 
 </html>
