Actualización de json
Actualice los json de:
Doctores -> tienen especialidad
Especialidades -> las actualice conforme a las de Javier y añadí otras que considero importante.
user-> puse nombre, es decir nombre completo "name" y "username" para id o nombre de pila.
Modifique server para hacer un join entre especialidades y doctores, es importante para contáctanos ya que nos dará el join entre los 2 archivos y nos lo regresará.
Modifique los css para la parte de footer y una mejor visualización de doctores.
Modifique el html de "login" para poner el nombre completo de un nuevo usuario.

--- a/Cliente/pages/login.html
+++ b/Cliente/pages/login.html
@@ -18,6 +18,7 @@
                 <h1>Crear Cuenta</h1>
                 <span>Introduce un nombre de usuario</span>
                 <input type="text" id="newUsername" placeholder="Nombre de usuario" required>
+                <input type="text" id="newName" placeholder="Nombre de completo" required>
                 <input type="password" id="newPassword" placeholder="Contraseña" required>
                 <button type="submit">Registrar</button>
                 <p id="registerMessage"></p> <!-- Para mensajes de registro -->
