Actualizacion de login
Los links de cotalogoAnalisis.html se han enlazado correctamente.

--- a/Cliente/pages/contactanos.html
+++ b/Cliente/pages/contactanos.html
@@ -112,7 +112,7 @@
       </div>
       <div class="company">
         <p>Ingenieros JAV S.A C.V</p>
-        <p>Consulta nuestro catálogo de precios</p>
+        <p><a href="./catalogoAnalisis.html">Consulta nuestro catálogo de precios</a></p>
       </div>
       <div class="social-media">
         <p>Síguenos en nuestras redes sociales</p>
