--- a/Cliente/pages/doctores.html
+++ b/Cliente/pages/doctores.html
@@ -56,7 +56,7 @@
       <div class="company">
         <p>Ingenieros JAV S.A C.V</p>
         <!-- Texto sobre el catálogo de precios -->
-        <p>Consulta nuestro catálogo de precios</p>
+        <p><a href="./catalogoAnalisis.html">Consulta nuestro catálogo de precios</a></p>
       </div>
       <!-- Enlaces a redes sociales -->
       <div class="social-media">
