--- a/Cliente/pages/consultaHistorialMedico.html
+++ b/Cliente/pages/consultaHistorialMedico.html
@@ -62,7 +62,7 @@
           <div class="company">
             <p>Ingenieros JAV S.A C.V</p>
             <!--Los catalogos como lo definimos?-->
-            <p><a href="./pages/catalogoAnalisis.html">Consulta nuestro catálogo de precios</a></p>
+            <p><a href="./catalogoAnalisis.html">Consulta nuestro catálogo de precios</a></p>
           </div>
           <div class="social-media">
             <p>Síguenos en nuestras redes sociales</p>
