--- a/Cliente/index.html
+++ b/Cliente/index.html
@@ -10,7 +10,8 @@
   <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css" rel="stylesheet" />
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
-  <link rel="icon" type="image/jpeg" href="https://raw.githubusercontent.com/Javier-Vera-Flores/Hospital-Ing-JAV-sa-de-cv/main/Cliente/Imagenes/icono.jpg">
+  <link rel="icon" type="image/jpeg"
+    href="https://raw.githubusercontent.com/Javier-Vera-Flores/Hospital-Ing-JAV-sa-de-cv/main/Cliente/Imagenes/icono.jpg">
 </head>
 
 <body>
@@ -56,7 +57,8 @@
           </div>
         </div>
         <div class="carousel-item" data-bs-interval="2000">
-          <img src="./Imagenes/imagenes_carrusel/diapo_2.jpg" class="d-block w-100" alt="...">
+          <a href="./pages/catalogoAnalisis.html"><img src="./Imagenes/imagenes_carrusel/diapo_2.jpg"
+              class="d-block w-100" alt="..."></a>
           <div class="carousel-caption d-none d-md-block">
             <h5>Accede a beneficios increíbles</h5>
             <p>Contamos con un amplico catálogo en química para tu salud. Para este 2025 que te sobre tiempo para tí!!
