--- a/Cliente/pages/contactanos.html
+++ b/Cliente/pages/contactanos.html
@@ -1,131 +1,136 @@
 <!DOCTYPE html>
 <html lang="es">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Contáctanos</title>
-    <link rel="stylesheet" href="../estilos/contactanos.css" />
-    <script src="https://smtpjs.com/v3/smtp.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/@emailjs/browser@4/dist/email.min.js"></script>
 
-    <link
-      href="https://unpkg.com/maplibre-gl@2.4.0/dist/maplibre-gl.css"
-      rel="stylesheet"
-    />
-    <script src="https://unpkg.com/maplibre-gl@2.4.0/dist/maplibre-gl.js"></script>
-    <script src="../scripts/mapkick.js"></script>
-    <script>
-      Mapkick.options = { style: "https://demotiles.maplibre.org/style.json" };
-    </script>
-  </head>
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <!-- Título de la página -->
+  <title>Contáctanos</title>
 
-  <header>
-    <div class="header-container">
-      <div class="logo">
-        <img
-          src="https://raw.githubusercontent.com/2212002118/Ingenieros_JAV/9153ef5770ea15b43be4d72f90852b55475878f1/Final/Cliente/Imagenes/logo.jpg"
-          alt="Logo"
-        />
+  <!-- Estilos CSS personalizados -->
+  <link rel="stylesheet" href="../estilos/contactanos.css" />
+
+  <!-- Librerías para envío de correos -->
+  <!-- EmailJS para integración con servicios de correo -->
+  <script src="https://cdn.jsdelivr.net/npm/@emailjs/browser@4/dist/email.min.js"></script>  
+
+  <!-- Iconos e ícono de la página -->
+  <link rel="icon" type="image/jpeg" href="https://raw.githubusercontent.com/Javier-Vera-Flores/Hospital-Ing-JAV-sa-de-cv/main/Cliente/Imagenes/icono.jpg">
+  <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css" rel="stylesheet" />
+  
+  <!-- Librerías para mostrar el mapa -->
+  <link rel="stylesheet" href="https://unpkg.com/leaflet@1.9.3/dist/leaflet.css" />
+  <script src="https://unpkg.com/leaflet@1.9.3/dist/leaflet.js"></script>
+</head>
+
+<header>
+  <div class="header-container">
+    <!-- Logo del sitio web -->
+    <div class="logo">
+      <img
+        src="https://raw.githubusercontent.com/2212002118/Ingenieros_JAV/9153ef5770ea15b43be4d72f90852b55475878f1/Final/Cliente/Imagenes/logo.jpg"
+        alt="Logo" />
+    </div>
+
+    <!-- Menú de navegación -->
+    <nav>
+      <ul class="nav-links">
+        <li><a href="../index.html">Inicio</a></li>
+        <li><a href="../pages/consultaCita.html">Consulta tu Cita (Pacientes CRUD)</a></li>
+        <li><a href="doctores.html">Nuestro equipo médico</a></li>
+        <li><a href="../pages/consultaHistorialMedico.html">Consulta tu Historial Médico (CRUD)</a></li>
+        <li><a href="contactanos.html">Contáctanos</a></li>
+      </ul>
+    </nav>
+
+    <!-- Saludo de usuario y botón de cierre de sesión -->
+    <div class="user-container">
+      <div id="userGreeting">Hola, Usuario</div>
+      <button id="logoutButton">Cerrar Sesión</button>
+    </div>
+  </div>
+</header>
+
+<body>
+  <!-- Sección de mapa -->
+  <h1>Dirección</h1>
+  <div id="map" style="height: 400px"></div>
+  <script>
+    var map = L.map('map').setView([19.5029848, -99.1859738], 18);
+
+    L.tileLayer('https://{s}.tile.openstreetmap.org/{z}/{x}/{y}.png', {
+        attribution: '&copy; OpenStreetMap contributors'
+    }).addTo(map);
+
+    // Icono personalizado con RAW URL de GitHub
+    var customIcon = L.icon({
+        iconUrl: 'https://raw.githubusercontent.com/Javier-Vera-Flores/Hospital-Ing-JAV-sa-de-cv/main/Cliente/Imagenes/mapa.png', // URL RAW
+        iconSize: [40, 40],  // Tamaño del icono
+        iconAnchor: [20, 40], // Punto de anclaje del icono
+        popupAnchor: [0, -40] // Ajuste del popup
+    });
+
+    // Agregar marcador con icono personalizado
+    L.marker([19.5029848, -99.1859738], { icon: customIcon }).addTo(map)
+        .bindPopup('Ubicación Específica')
+        .openPopup();
+  </script>
+  <!-- Sección del formulario de contacto -->
+  <h1>Contáctanos</h1>
+  <form id="form">
+    <div class="field">
+      <label for="nombre">Nombre</label>
+      <input type="text" name="nombre" id="nombre" placeholder="Escribe tu nombre" required />
+    </div>
+    <div class="field">
+      <label for="correo">Correo</label>
+      <input type="email" name="correo" id="correo" placeholder="Escribe tu correo electrónico" required />
+    </div>
+    <div class="field">
+      <label for="mensaje">Mensaje</label>
+      <textarea name="mensaje" id="mensaje" rows="4" placeholder="Escribe tu mensaje" required></textarea>
+    </div>
+    <input type="submit" id="button" value="Enviar Mensaje" />
+  </form>
+
+  <!-- Inicialización de EmailJS -->
+  <script type="text/javascript">
+    emailjs.init("x2vvcMidNsRBgrVr0");
+  </script>
+
+  <!-- Script personalizado para la funcionalidad del formulario -->
+  <script src="../scripts/contactanos.js"></script>
+
+  <!-- Pie de página con información de contacto -->
+  <footer>
+    <div class="footer-container">
+      <div class="address">
+        <p>
+          Dirección: Av San Pablo Xalpa 180, San Martin Xochinahuac,
+          Azcapotzalco, 02128 Ciudad de México, CDMX
+        </p>
       </div>
-      <nav>
-        <ul class="nav-links">
-          <li><a href="../index.html">Inicio</a></li>
-          <li><a href="#">Consulta tu Cita (Pacientes CRUD)</a></li>
-          <li><a href="doctores.html">Nuestro equipo médico</a></li>
-          <li><a href="#">Consulta tu Historial Médico (CRUD)</a></li>
-          <li><a href="contactanos.html">Contáctanos</a></li>
-        </ul>
-      </nav>
-      <!-- Contenedor de usuario y botón de cierre de sesión -->
-      <div class="user-container">
-        <div id="userGreeting">Hola, Usuario</div>
-        <button id="logoutButton">Cerrar Sesión</button>
+      <div class="company">
+        <p>Ingenieros JAV S.A C.V</p>
+        <p>Consulta nuestro catálogo de precios</p>
+      </div>
+      <div class="social-media">
+        <p>Síguenos en nuestras redes sociales</p>
+        <div class="icons">
+          <span>
+            <a href="https://www.facebook.com/CBI.UAM.Azcapotzalco/?locale=es_LA" target="_blank">
+              <i class="fab fa-facebook"></i> Facebook
+            </a>
+          </span>
+          <span>
+            <a href="https://x.com/UAMAzcOficial" target="_blank">
+              <i class="fab fa-x"></i> X
+            </a>
+          </span>
+        </div>
       </div>
     </div>
-  </header>
+  </footer>
+</body>
 
-  <body>
-    <h1>Dirección</h1>
-    <div id="map" style="height: 400px"></div>
-
-    <script>
-      new Mapkick.Map("map", [
-        { latitude: 19.5033613, longitude: -99.1870307 },
-      ]);
-    </script>
-
-    <h1>Contáctanos</h1>
-    <form id="form">
-      <div class="field">
-        <label for="nombre">Nombre</label>
-        <input
-          type="text"
-          name="nombre"
-          id="nombre"
-          placeholder="Escribe tu nombre"
-          required
-        />
-      </div>
-      <div class="field">
-        <label for="correo">Correo</label>
-        <input
-          type="email"
-          name="correo"
-          id="correo"
-          placeholder="Escribe tu correo electrónico"
-          required
-        />
-      </div>
-      <div class="field">
-        <label for="mensaje">Mensaje</label>
-        <textarea
-          name="mensaje"
-          id="mensaje"
-          rows="4"
-          placeholder="Escribe tu mensaje"
-          required
-        ></textarea>
-      </div>
-      <input type="submit" id="button" value="Enviar Mensaje" />
-    </form>
-    <script type="text/javascript">
-      emailjs.init("x2vvcMidNsRBgrVr0");
-    </script>
-    <script src="../scripts/contactanos.js"></script>
-
-    <!--No cambiar lo de abajo-->
-    <footer>
-      <div class="footer-container">
-        <div class="address">
-          <p>
-            Dirección: Av San Pablo Xalpa 180, San Martin Xochinahuac,
-            Azcapotzalco, 02128 Ciudad de México, CDMX
-          </p>
-        </div>
-        <div class="company">
-          <p>Ingenieros JAV S.A C.V</p>
-          <!--Los catalogos como lo definimos?-->
-          <p>Consulta nuestro catálogo de precios</p>
-        </div>
-        <div class="social-media">
-          <p>Síguenos en nuestras redes sociales</p>
-          <div class="icons">
-            <span>
-              <a
-                href="https://www.facebook.com/CBI.UAM.Azcapotzalco/?locale=es_LA"
-                target="_blank"
-              >
-                <i class="fab fa-facebook"></i> Facebook
-              </a>
-            </span>
-            <span>
-              <a href="https://x.com/UAMAzcOficial" target="_blank">
-                <i class="fab fa-x-twitter"></i> Twitter
-              </a>
-            </span>
-          </div>
-        </div>
-      </div>
-    </footer>
-  </body>
 </html>
