--- a/Cliente/pages/consultaHistorialMedico.html
+++ b/Cliente/pages/consultaHistorialMedico.html
@@ -28,9 +28,9 @@
       <nav>
         <ul class="nav-links">
           <li><a href="../index.html">Inicio</a></li>
-          <li><a href="../pages/consultaCita.html">Consulta tu Cita (Pacientes CRUD)</a></li>
-          <li><a href="doctores.html">Nuestro equipo médico</a></li>
-          <li><a href="../pages/consultaHistorialMedico.html">Consulta tu Historial Médico (CRUD)</a></li>
+          <li><a href="../pages/consultaCita.html">Consulta tu Cita</a></li>
+          <li><a href="../pages/doctores.html">Nuestro equipo médico</a></li>
+          <li><a href="../pages/consultaHistorialMedico.html">Consulta tu Historial Médico</a></li>
           <li><a href="contactanos.html">Contáctanos</a></li>
         </ul>
       </nav>
