--- a/Cliente/index.html
+++ b/Cliente/index.html
@@ -10,7 +10,8 @@
   <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css" rel="stylesheet" />
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
-  <link rel="icon" type="image/jpeg" href="https://raw.githubusercontent.com/Javier-Vera-Flores/Hospital-Ing-JAV-sa-de-cv/main/Cliente/Imagenes/icono.jpg">
+  <link rel="icon" type="image/jpeg"
+    href="https://raw.githubusercontent.com/Javier-Vera-Flores/Hospital-Ing-JAV-sa-de-cv/main/Cliente/Imagenes/icono.jpg">
 </head>
 
 <body>
@@ -25,9 +26,9 @@
       <nav>
         <ul class="nav-links">
           <li><a href="index.html">Inicio</a></li>
-          <li><a href="./pages/consultaCita.html">Consulta tu Cita (Pacientes CRUD)</a></li>
+          <li><a href="./pages/consultaCita.html">Consulta tu Cita</a></li>
           <li><a href="./pages/doctores.html">Nuestro equipo médico</a></li>
-          <li><a href="./pages/consultaHistorialMedico.html">Consulta tu Historial Médico (CRUD)</a></li>
+          <li><a href="./pages/consultaHistorialMedico.html">Consulta tu Historial Médico</a></li>
           <li><a href="./pages/contactanos.html">Contáctanos</a></li>
         </ul>
       </nav>
@@ -56,7 +57,8 @@
           </div>
         </div>
         <div class="carousel-item" data-bs-interval="2000">
-          <img src="./Imagenes/imagenes_carrusel/diapo_2.jpg" class="d-block w-100" alt="...">
+          <a href="./pages/catalogoAnalisis.html"><img src="./Imagenes/imagenes_carrusel/diapo_2.jpg"
+              class="d-block w-100" alt="..."></a>
           <div class="carousel-caption d-none d-md-block">
             <h5>Accede a beneficios increíbles</h5>
             <p>Contamos con un amplico catálogo en química para tu salud. Para este 2025 que te sobre tiempo para tí!!
@@ -83,21 +85,6 @@
   </section>
   <!--Cuerpo principal de la pagina-->
   <main>
-    <!-- <section class="image-gallery">
-      <div>
-        <img
-          src="https://raw.githubusercontent.com/2212002118/Ingenieros_JAV/9153ef5770ea15b43be4d72f90852b55475878f1/Final/Cliente/Imagenes/imagen1.jpg" />
-      </div>
-      <div>
-        <img
-          src="https://raw.githubusercontent.com/2212002118/Ingenieros_JAV/9153ef5770ea15b43be4d72f90852b55475878f1/Final/Cliente/Imagenes/imagen1.jpg" />
-      </div>
-      <div>
-        <img
-          src="https://raw.githubusercontent.com/2212002118/Ingenieros_JAV/9153ef5770ea15b43be4d72f90852b55475878f1/Final/Cliente/Imagenes/imagen1.jpg" />
-      </div>
-    </section> -->
-
     <article class="about-us">
       <h2>Sobre nosotros</h2>
       <section class="about-us-container">
