--- a/Cliente/pages/consultaCita.html
+++ b/Cliente/pages/consultaCita.html
@@ -5,11 +5,13 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Consulta tu historial Medico (CRUD)</title>
-  <link rel="icon" type="image/jpeg" href="https://raw.githubusercontent.com/Javier-Vera-Flores/Hospital-Ing-JAV-sa-de-cv/main/Cliente/Imagenes/icono.jpg">
+  <link rel="icon" type="image/jpeg"
+    href="https://raw.githubusercontent.com/Javier-Vera-Flores/Hospital-Ing-JAV-sa-de-cv/main/Cliente/Imagenes/icono.jpg">
   <link rel="stylesheet" href="../estilos/consultaCita.css" />
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
   <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css" rel="stylesheet" />
+  <!-- <link rel="stylesheet" href="../estilos/formularioNuevaCita.css"> -->
 </head>
 
 <body>
@@ -23,9 +25,9 @@
       <nav>
         <ul class="nav-links">
           <li><a href="../index.html">Inicio</a></li>
-          <li><a href="../pages/consultaCita.html">Consulta tu Cita (Pacientes CRUD)</a></li>
+          <li><a href="../pages/consultaCita.html">Consulta tu Cita</a></li>
           <li><a href="doctores.html">Nuestro equipo médico</a></li>
-          <li><a href="../pages/consultaHistorialMedico.html">Consulta tu Historial Médico (CRUD)</a></li>
+          <li><a href="../pages/consultaHistorialMedico.html">Consulta tu Historial Médico</a></li>
           <li><a href="contactanos.html">Contáctanos</a></li>
         </ul>
       </nav>
@@ -66,7 +68,7 @@
       <div class="company">
         <p>Ingenieros JAV S.A C.V</p>
         <!--Los catalogos como lo definimos?-->
-        <p><a href="./pages/catalogoAnalisis.html">Consulta nuestro catálogo de precios</a></p>
+        <p><a href="./catalogoAnalisis.html">Consulta nuestro catálogo de precios</a></p>
       </div>
       <div class="social-media">
         <p>Síguenos en nuestras redes sociales</p>
