--- a/Cliente/pages/contactanos.html
+++ b/Cliente/pages/contactanos.html
@@ -36,9 +36,9 @@
     <nav>
       <ul class="nav-links">
         <li><a href="../index.html">Inicio</a></li>
-        <li><a href="../pages/consultaCita.html">Consulta tu Cita (Pacientes CRUD)</a></li>
+        <li><a href="../pages/consultaCita.html">Consulta tu Cita</a></li>
         <li><a href="doctores.html">Nuestro equipo médico</a></li>
-        <li><a href="../pages/consultaHistorialMedico.html">Consulta tu Historial Médico (CRUD)</a></li>
+        <li><a href="../pages/consultaHistorialMedico.html">Consulta tu Historial Médico</a></li>
         <li><a href="contactanos.html">Contáctanos</a></li>
       </ul>
     </nav>
@@ -112,7 +112,7 @@
       </div>
       <div class="company">
         <p>Ingenieros JAV S.A C.V</p>
-        <p>Consulta nuestro catálogo de precios</p>
+        <p><a href="./catalogoAnalisis.html">Consulta nuestro catálogo de precios</a></p>
       </div>
       <div class="social-media">
         <p>Síguenos en nuestras redes sociales</p>
