--- a/Cliente/pages/consultaHistorialMedico.html
+++ b/Cliente/pages/consultaHistorialMedico.html
@@ -8,45 +8,27 @@
   <title>Consulta tu historial Medico</title>
   <!--Link necesario para cargar el css-->
   <link rel="stylesheet" href="../estilos/consultaHistorialMedico.css" />
+  <link rel="stylesheet" href="../estilos/footer.css" />
   <!--Enlaces para los iconos de la pagina web-->
   <link rel="icon" type="image/jpeg"
     href="https://raw.githubusercontent.com/Javier-Vera-Flores/Hospital-Ing-JAV-sa-de-cv/main/Cliente/Imagenes/icono.jpg">
-  
+
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
   <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css" rel="stylesheet" />
+  <script src="https://code.jquery.com/jquery-3.2.1.min.js"></script>
 </head>
 
-<body>
+<body data-url="../pages/consultaHistorialMedico.html">
   <header>
-    <div class="header-container">
-      <div class="logo">
-        <img
-          src="https://raw.githubusercontent.com/2212002118/Ingenieros_JAV/9153ef5770ea15b43be4d72f90852b55475878f1/Final/Cliente/Imagenes/logo.jpg"
-          alt="Logo" />
-      </div>
-      <nav>
-        <ul class="nav-links">
-          <li><a href="../index.html">Inicio</a></li>
-          <li><a href="../pages/consultaCita.html">Consulta tu Cita</a></li>
-          <li><a href="../pages/doctores.html">Nuestro equipo médico</a></li>
-          <li><a href="../pages/consultaHistorialMedico.html">Consulta tu Historial Médico</a></li>
-          <li><a href="contactanos.html">Contáctanos</a></li>
-        </ul>
-      </nav>
-      <!-- Contenedor de usuario y botón de cierre de sesión -->
-      <div class="user-container">
-        <div id="userGreeting">Hola, Usuario</div>
-        <button id="logoutButton">Cerrar Sesión</button>
-      </div>
-    </div>
+    <div id="divHeader" class="header-container"></div>
   </header>
   <main>
-    <div id="div_default">
-      <div  class="card_default mb-3" style="max-width: 900px;">
+    <div id="div_default" style="display: flex;">
+      <div class="card_default mb-3" style="max-width: 900px;">
         <div class="row no-gutters">
           <div class="card-logo col-md-7">
-            <img id="img_logo" src="../Imagenes/logo2.png" alt="#">
+            <img id="img_logo" src="../Imagenes/icono.png" alt="#">
             <h1 id="title_img">VITALINK &reg;</h1>
           </div>
           <div class="card-txt col-md-5">
@@ -59,44 +41,151 @@
         </div>
       </div>
     </div>
-    <div class="listado-busqueda"></div>
-  </main>
-  <!--No modificar-->
-  <footer>
-    <div class="footer-container">
-      <div class="address">
-        <p>
-          Dirección: Av San Pablo Xalpa 180, San Martin Xochinahuac,
-          Azcapotzalco, 02128 Ciudad de México, CDMX
-        </p>
+    <div id="div_carga" style="display: none;">
+      <div class="spinner-grow text-success" role="status">
+        <span class="visually-hidden">Loading...</span>
       </div>
-      <div class="company">
-        <p>Ingenieros JAV S.A C.V</p>
-        <!--Los catalogos como lo definimos?-->
-        <p><a href="./pages/catalogoAnalisis.html">Consulta nuestro catálogo de precios</a></p>
+      <div class="spinner-grow text-success" role="status">
+        <span class="visually-hidden">Loading...</span>
       </div>
-      <div class="social-media">
-        <p>Síguenos en nuestras redes sociales</p>
-        <div class="icons">
-          <span>
-            <a href="https://www.facebook.com/CBI.UAM.Azcapotzalco/?locale=es_LA" target="_blank">
-              <i class="fab fa-facebook"></i> Facebook
-            </a>
-          </span>
-          <span>
-            <a href="https://x.com/UAMAzcOficial" target="_blank">
-              <i class="fab fa-x"></i> X
-            </a>
-          </span>
-        </div>
+      <div class="spinner-grow text-success" role="status">
+        <span class="visually-hidden">Loading...</span>
+      </div>
+      <div class="spinner-grow text-success" role="status">
+        <span class="visually-hidden">Loading...</span>
+      </div>
+      <div class="spinner-grow text-success" role="status">
+        <span class="visually-hidden">Loading...</span>
+      </div>
+      <div class="spinner-grow text-success" role="status">
+        <span class="visually-hidden">Loading...</span>
+      </div>
+      <div class="spinner-grow text-success" role="status">
+        <span class="visually-hidden">Loading...</span>
+      </div>
+      <div class="spinner-grow text-success" role="status">
+        <span class="visually-hidden">Loading...</span>
       </div>
     </div>
+    <div id="div_historial" class="container-xxl card " style="display: none;">
+      <h1 class="card-header">
+        Historial Médico
+      </h1>
+      <div class="card-body">
+        <h3 class="card-title">Ficha de Identificación</h3>
+        <form>
+          <div class="form-datosPersonales">
+            <div class="form-group">
+              <label>Nombre: </label>
+              <input class="form-control" id="inputNombre" disabled>
+            </div>
+            <div class="form-group">
+              <label>Edad (Años):</label>
+              <input class="form-control" id="inputEdad" disabled>
+            </div>
+            <div class="form-group">
+              <label>Sexo:</label>
+              <input class="form-control" id="inputSexo" disabled>
+            </div>
+            <div class="form-group">
+              <label>Estado Civil:</label>
+              <input class="form-control" id="inputEstadoCivil" disabled>
+            </div>
+            <div class="form-group">
+              <label>Religión:</label>
+              <input class="form-control" id="inputReligion" disabled>
+            </div>
+          </div>
+          <div class="form-estudios">
+            <div class="form-group">
+              <label>Escolaridad:</label>
+              <input class="form-control" id="inputEscolaridad" disabled>
+            </div>
+            <div class="form-group">
+              <label>Ocupación:</label>
+              <input class="form-control" id="inputOcupacion" disabled>
+            </div>
+            <div class="form-group">
+              <label>Seguro Médico:</label>
+              <input class="form-control" id="inputSeguro" disabled>
+            </div>
+          </div>
+          <div class="form-nacimiento">
+            <div class="form-group">
+              <label>Fecha de Nacimiento:</label>
+              <input class="form-control" id="inputFNacimiento" disabled>
+            </div>
+            <div class="form-group">
+              <label>Lugar de Nacimiento:</label>
+              <input class="form-control" id="inputLNacimiento" disabled>
+            </div>
+            <div class="form-group">
+              <label>Nacionalidad:</label>
+              <input class="form-control" id="inputNacionalidad" disabled>
+            </div>
+            <div class="form-group">
+              <label>Dirección:</label>
+              <input class="form-control" id="inputDireccion" disabled>
+            </div>
+          </div>
+        </form>
+
+        <h3 class="card-title">Responsable</h3>
+        <form>
+          <div class="form-responsable">
+            <div class="form-group">
+              <label>Nombre: </label>
+              <input class="form-control" id="inputNombreResponsble" disabled>
+            </div>
+            <div class="form-group">
+              <label>Vínculo</label>
+              <input class="form-control" id="inputVinculo" disabled>
+            </div>
+          </div>
+        </form>
+
+        <h3 class="card-title">Antecedentes HeredoFamiliares</h3>
+        <form>
+          <div class="form-row form-historial">
+            <div class="form-group">
+              <textarea class="form-control" id="txtHeredo" disabled></textarea>
+            </div>
+        </form>
+
+        <h3 class="card-title">Antecedentes Personales No Patológicos</h3>
+        <form>
+          <div class="form-row form-historial">
+            <div class="form-group">
+              <textarea class="form-control" id="txtPersonalesNP" disabled></textarea>
+            </div>
+        </form>
+
+        <h3 class="card-title">Antecedentes Personales Patológicos</h3>
+        <form>
+          <div class="form-row form-historial">
+            <div class="form-group">
+              <textarea class="form-control" id="txtPersonalesP" disabled></textarea>
+            </div>
+        </form>
+
+        <h3 class="card-title">Antecedentes GinecoObstétrico</h3>
+        <form>
+          <div class="form-row form-historial">
+            <div class="form-group">
+              <textarea class="form-control" id="txtGineco" disabled></textarea>
+            </div>
+        </form>
+      </div>
+    </div>
+  </main>
+  <footer>
+    <div id="divFooter" class="footer-container"></div>
   </footer>
-  <!--Fin no modificar-->
+
+  <!-- Script para añadir footer y header -->
+  <script src="../scripts/inicio.js"></script>
   <script type="module" src="../scripts/consultaHistorialM.js"></script>
 </body>
-<script src="https://code.jquery.com/jquery-3.2.1.slim.min.js"
-  integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
 <script src="https://cdn.jsdelivr.net/npm/popper.js@1.12.9/dist/umd/popper.min.js"
   integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/js/bootstrap.min.js"
