--- a/Cliente/header.html
+++ b/Cliente/header.html
@@ -1,5 +1,5 @@
 <div class="logo">
-    <img src="../Imagenes/navlogo.png" alt="Logo" />
+    <img src="../Imagenes/logo.png" alt="Logo" />
 </div>
 <nav>
     <ul class="nav-links">
