--- a/Cliente/pages/contactanos.html
+++ b/Cliente/pages/contactanos.html
@@ -9,15 +9,14 @@
 
   <!-- Estilos CSS personalizados -->
   <link rel="stylesheet" href="../estilos/contactanos.css" />
-  <link rel="stylesheet" href="../estilos/footer.css" />
+  <link rel="stylesheet" href="../estilos/footer&header.css"/>
 
   <!-- Librerías para envío de correos -->
   <!-- EmailJS para integración con servicios de correo -->
   <script src="https://cdn.jsdelivr.net/npm/@emailjs/browser@4/dist/email.min.js"></script>
 
   <!-- Iconos e ícono de la página -->
-  <link rel="icon" type="image/jpeg"
-    href="https://raw.githubusercontent.com/Javier-Vera-Flores/Hospital-Ing-JAV-sa-de-cv/main/Cliente/Imagenes/icono.jpg">
+  <link rel="icon" type="image/jpeg" href="../Imagenes/icono.png">
   <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css" rel="stylesheet" />
 
   <!-- Librerías para mostrar el mapa -->
