--- a/Cliente/index.html
+++ b/Cliente/index.html
@@ -5,13 +5,13 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Hospital Ing. JAV & Asociados</title>
-  <link rel="stylesheet" href="./estilos/inicio.css" />
-  <link rel="stylesheet" href="./estilos/footer.css" />
+  <link rel="stylesheet" href="../estilos/inicio.css" />
+  <link rel="stylesheet" href="../estilos/footer&header.css"/>
   <!-- Incluye el enlace a Font Awesome para los iconos -->
   <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css" rel="stylesheet" />
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
-  <link rel="icon" type="image/jpeg" href="./Imagenes/icono.png">
+  <link rel="icon" type="image/jpeg" href="../Imagenes/icono.png">
 </head>
 
 <body data-url="../index.html">
