--- a/Cliente/pages/consultaHistorialMedico.html
+++ b/Cliente/pages/consultaHistorialMedico.html
@@ -8,10 +8,9 @@
   <title>Consulta tu historial Medico</title>
   <!--Link necesario para cargar el css-->
   <link rel="stylesheet" href="../estilos/consultaHistorialMedico.css" />
-  <link rel="stylesheet" href="../estilos/footer.css" />
+  <link rel="stylesheet" href="../estilos/footer&header.css"/>
   <!--Enlaces para los iconos de la pagina web-->
-  <link rel="icon" type="image/jpeg"
-    href="https://raw.githubusercontent.com/Javier-Vera-Flores/Hospital-Ing-JAV-sa-de-cv/main/Cliente/Imagenes/icono.jpg">
+  <link rel="icon" type="image/jpeg" href="../Imagenes/icono.png">
 
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
@@ -25,13 +24,12 @@
   </header>
   <main>
     <div id="div_default" style="display: flex;">
-      <div class="card_default mb-3" style="max-width: 900px;">
+      <div class="card_default mb-3" style="max-width: 700px;">
         <div class="row no-gutters">
-          <div class="card-logo col-md-7">
-            <img id="img_logo" src="../Imagenes/icono.png" alt="#">
-            <h1 id="title_img">VITALINK &reg;</h1>
+          <div class="card-logo col-md-6">
+            <img id="img_logo" src="../Imagenes/logo2.png" alt="#">
           </div>
-          <div class="card-txt col-md-5">
+          <div class="card-txt col-md-6">
             <div class="card-body">
               <h5 class="card-title">¿Todavía no tienes cuenta con nosotros?</h5>
               <p class="card-text">Crea una cuenta o inicia sesión para tener acceso a tu historial médico</p>
