--- a/Cliente/pages/doctores.html
+++ b/Cliente/pages/doctores.html
@@ -10,9 +10,9 @@
   <title>Doctores</title>
   <!-- Enlace al archivo CSS personalizado para los estilos de esta página -->
   <link rel="stylesheet" href="../estilos/doctores.css" />
-  <link rel="stylesheet" href="../estilos/footer.css" />
+  <link rel="stylesheet" href="../estilos/footer&header.css"/>
   <!-- Favicon que se muestra en la pestaña del navegador -->
-  <link rel="icon" type="image/jpeg" href="https://raw.githubusercontent.com/Javier-Vera-Flores/Hospital-Ing-JAV-sa-de-cv/main/Cliente/Imagenes/icono.jpg">
+  <link rel="icon" type="image/jpeg" href="../Imagenes/icono.png">
   <!-- Biblioteca externa Font Awesome para el uso de iconos -->
   <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css" rel="stylesheet" />
   <script src="https://code.jquery.com/jquery-3.2.1.min.js"></script>
