--- a/Cliente/header.html
+++ b/Cliente/header.html
@@ -1,4 +1,4 @@
-<div class="logo">
+<!--<div class="logo">
     <img src="../Imagenes/logo.png" alt="Logo" />
 </div>
 <nav>
@@ -9,9 +9,34 @@
         <li><a href="../pages/consultaHistorialMedico.html">Consulta tu Historial Médico</a></li>
         <li><a href="../pages/contactanos.html">Contáctanos</a></li>
     </ul>
-</nav>
+</nav>-->
 <!-- Contenedor de usuario y botón de cierre de sesión -->
-<div class="user-container">
+<!--<div class="user-container">
     <div id="userGreeting">Hola, Usuario</div>
     <button id="logoutButton">Cerrar Sesión</button>
-</div>
+</div>-->
+
+<nav id="menu" class="navbar navbar-expand-lg bg-body-tertiary">
+    <div class="container-fluid">
+        <div class="logo">
+            <a href="../index.html"><img src="../Imagenes/logo.png" alt="Logo" /></a>
+        </div>
+        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarScroll"
+            aria-controls="navbarScroll" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarScroll">
+            <ul class="nav-links">
+                <li><a href="../index.html">Inicio</a></li>
+                <li><a href="../pages/consultaCita.html">Consulta tu Cita</a></li>
+                <li><a href="../pages/doctores.html">Nuestro equipo médico</a></li>
+                <li><a href="../pages/consultaHistorialMedico.html">Consulta tu Historial Médico</a></li>
+                <li><a href="../pages/contactanos.html">Contáctanos</a></li>
+            </ul>
+            <div class="user-container">
+                <div id="userGreeting">Hola, Usuario</div>
+                <button id="logoutButton">Cerrar Sesión</button>
+            </div>
+        </div>
+    </div>
+</nav>
