--- a/Cliente/pages/contactanos.html
+++ b/Cliente/pages/contactanos.html
@@ -7,81 +7,86 @@
   <!-- Título de la página -->
   <title>Contáctanos</title>
 
-  <!-- Estilos CSS personalizados -->
   <link rel="stylesheet" href="../estilos/contactanos.css" />
-  <link rel="stylesheet" href="../estilos/footer&header.css"/>
-
-  <!-- Librerías para envío de correos -->
-  <!-- EmailJS para integración con servicios de correo -->
-  <script src="https://cdn.jsdelivr.net/npm/@emailjs/browser@4/dist/email.min.js"></script>
-
-  <!-- Iconos e ícono de la página -->
+  <link rel="stylesheet" href="../estilos/footer&header.css" />
+  <!--Enlaces para los iconos de la pagina web-->
   <link rel="icon" type="image/jpeg" href="../Imagenes/icono.png">
+
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
+    integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
   <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css" rel="stylesheet" />
 
   <!-- Librerías para mostrar el mapa -->
   <link rel="stylesheet" href="https://unpkg.com/leaflet@1.9.3/dist/leaflet.css" />
+
   <script src="https://unpkg.com/leaflet@1.9.3/dist/leaflet.js"></script>
   <script src="https://code.jquery.com/jquery-3.2.1.min.js"></script>
+  <!-- EmailJS para integración con servicios de correo -->
+  <script src="https://cdn.jsdelivr.net/npm/@emailjs/browser@4/dist/email.min.js"></script>
+
 </head>
 
 <body data-url="../pages/contactanos.html">
   <header>
     <div id="divHeader" class="header-container"></div>
   </header>
+<!-- Sección de mapa -->
+<h1>Dirección</h1>
+<div id="map" style="height: 400px"></div>
+<script>
+  var map = L.map('map').setView([19.5029848, -99.1859738], 18);
 
-  <!-- Sección de mapa -->
-  <h1>Dirección</h1>
-  <div id="map" style="height: 400px"></div>
-  <script>
-    var map = L.map('map').setView([19.5029848, -99.1859738], 18);
+  L.tileLayer('https://{s}.tile.openstreetmap.org/{z}/{x}/{y}.png', {
+    attribution: '&copy; OpenStreetMap contributors'
+  }).addTo(map);
 
-    L.tileLayer('https://{s}.tile.openstreetmap.org/{z}/{x}/{y}.png', {
-      attribution: '&copy; OpenStreetMap contributors'
-    }).addTo(map);
+  // Icono personalizado con RAW URL de GitHub
+  var customIcon = L.icon({
+    iconUrl: 'https://raw.githubusercontent.com/Javier-Vera-Flores/Hospital-Ing-JAV-sa-de-cv/main/Cliente/Imagenes/mapa.png', // URL RAW
+    iconSize: [40, 40],  // Tamaño del icono
+    iconAnchor: [20, 40], // Punto de anclaje del icono
+    popupAnchor: [0, -40] // Ajuste del popup
+  });
 
-    // Icono personalizado con RAW URL de GitHub
-    var customIcon = L.icon({
-      iconUrl: 'https://raw.githubusercontent.com/Javier-Vera-Flores/Hospital-Ing-JAV-sa-de-cv/main/Cliente/Imagenes/mapa.png', // URL RAW
-      iconSize: [40, 40],  // Tamaño del icono
-      iconAnchor: [20, 40], // Punto de anclaje del icono
-      popupAnchor: [0, -40] // Ajuste del popup
-    });
+  // Agregar marcador con icono personalizado
+  L.marker([19.5029848, -99.1859738], { icon: customIcon }).addTo(map)
+    .bindPopup('Ubicación Específica')
+    .openPopup();
+</script>
+<!-- Sección del formulario de contacto -->
+<h1>Contáctanos</h1>
+<form id="form">
+  <div class="field">
+    <label for="nombre">Nombre</label>
+    <input type="text" name="nombre" id="nombre" placeholder="Escribe tu nombre" required />
+  </div>
+  <div class="field">
+    <label for="correo">Correo</label>
+    <input type="email" name="correo" id="correo" placeholder="Escribe tu correo electrónico" required />
+  </div>
+  <div class="field">
+    <label for="mensaje">Mensaje</label>
+    <textarea name="mensaje" id="mensaje" rows="4" placeholder="Escribe tu mensaje" required></textarea>
+  </div>
+  <input type="submit" id="button" value="Enviar Mensaje" />
+</form>
 
-    // Agregar marcador con icono personalizado
-    L.marker([19.5029848, -99.1859738], { icon: customIcon }).addTo(map)
-      .bindPopup('Ubicación Específica')
-      .openPopup();
-  </script>
-  <!-- Sección del formulario de contacto -->
-  <h1>Contáctanos</h1>
-  <form id="form">
-    <div class="field">
-      <label for="nombre">Nombre</label>
-      <input type="text" name="nombre" id="nombre" placeholder="Escribe tu nombre" required />
-    </div>
-    <div class="field">
-      <label for="correo">Correo</label>
-      <input type="email" name="correo" id="correo" placeholder="Escribe tu correo electrónico" required />
-    </div>
-    <div class="field">
-      <label for="mensaje">Mensaje</label>
-      <textarea name="mensaje" id="mensaje" rows="4" placeholder="Escribe tu mensaje" required></textarea>
-    </div>
-    <input type="submit" id="button" value="Enviar Mensaje" />
-  </form>
-  <!-- Pie de página con información de contacto -->
   <footer>
     <div id="divFooter" class="footer-container"></div>
   </footer>
+
   <!-- Inicialización de EmailJS -->
   <script type="text/javascript">
     emailjs.init("x2vvcMidNsRBgrVr0");
   </script>
+
   <!-- Script para añadir footer y header -->
   <script src="../scripts/inicio.js"></script>
   <!-- Script personalizado para la funcionalidad del formulario -->
   <script src="../scripts/contactanos.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
+  integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
+  crossorigin="anonymous"></script>
 </body>
 
 </html>
