--- a/Cliente/pages/doctores.html
+++ b/Cliente/pages/doctores.html
@@ -15,6 +15,9 @@
   <link rel="icon" type="image/jpeg" href="../Imagenes/icono.png">
   <!-- Biblioteca externa Font Awesome para el uso de iconos -->
   <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css" rel="stylesheet" />
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
+  integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+
   <script src="https://code.jquery.com/jquery-3.2.1.min.js"></script>
 </head>
 
@@ -36,6 +39,9 @@
   <!-- Enlace al archivo JavaScript que maneja la lógica de esta página -->
   <script src="../scripts/inicio.js"></script>
   <script src="../scripts/doctores.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
+  integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
+  crossorigin="anonymous"></script>
 </body>
 
 </html>
